layout/style/ua.css
@import url(resource://gre-resources/html.css);
@import url(chrome://global/content/xul.css);

@namespace parsererror url(http://www.mozilla.org/newlayout/xml/parsererror.xml);







*|*::-moz-table {
  display: table !important;
  -moz-box-sizing: border-box; 
}

*|*::-moz-inline-table {
  display: inline-table !important;
  -moz-box-sizing: border-box; 
}

*|*::-moz-table-outer {
  display: inherit !important; 
  margin: 0 ! important;
  padding: 0 ! important;
  border: none ! important;
  float: inherit;
  clear: inherit;
  position: inherit;
  top: inherit;
  right: inherit;
  bottom: inherit;
  left: inherit;
  z-index: inherit;
  page-break-before: inherit;
  page-break-after: inherit;
  vertical-align: inherit; 
  line-height: inherit; 
}

*|*::-moz-table-row {
  display: table-row !important;
}



*|*::-moz-table-column {
  display: table-column !important;
}

*|*::-moz-table-column-group {
  display: table-column-group !important;
}
 
*|*::-moz-table-row-group {
  display: table-row-group !important;
}

*|*::-moz-table-cell {
  display: table-cell !important;
  white-space: inherit;
}



*|*::-moz-list-bullet, *|*::-moz-list-number {
  display: inline;
  vertical-align: baseline;
  -moz-margin-end: 8px;
}



*|*:-moz-any-link {
  cursor: pointer;
}

*|*:-moz-any-link:-moz-focusring {
  
  outline: 1px dotted;
}



*|*::-moz-anonymous-block, *|*::-moz-cell-content {
  display: block !important;
  position: static !important;
}

*|*::-moz-anonymous-block, *|*::-moz-anonymous-positioned-block {
  
  outline: inherit;
  outline-offset: inherit;
  clip-path: inherit;
  filter: inherit;
  mask: inherit;
  -moz-box-ordinal-group: inherit !important;
}

*|*::-moz-xul-anonymous-block {
  display: block ! important;
  position: static ! important;
  float: none ! important;
  -moz-box-ordinal-group: inherit !important;
}

*|*::-moz-scrolled-content, *|*::-moz-scrolled-canvas,
*|*::-moz-scrolled-page-sequence {
  
  padding: inherit;
  

  display: block;
  -moz-box-orient: inherit;
  

  unicode-bidi: inherit;
  -moz-column-count: inherit;
  -moz-column-width: inherit;
  -moz-column-gap: inherit;
  

  position: static !important;
  float: none !important;
}

*|*::-moz-viewport, *|*::-moz-viewport-scroll, *|*::-moz-canvas, *|*::-moz-scrolled-canvas {
  display: block !important;
  background-color: inherit;
}

*|*::-moz-viewport-scroll {
  overflow: auto;
%ifdef XP_WIN
  resize: both;
%endif
}

*|*::-moz-column-content { 
  
  
  unicode-bidi: inherit;
  
  display: inherit !important;
  

  height: 100%;
}

*|*::-moz-page, *|*::-moz-page-sequence, *|*::-moz-scrolled-page-sequence {
  display: block !important;
  background: transparent;
}

*|*::-moz-pagecontent {
  display: block !important;
}

*|*::-moz-pagebreak {
  display: block !important;
}

*|*::-moz-anonymous-positioned-block {
  display: block !important;
  position: relative;
  top: inherit; 
  left: inherit;
  bottom: inherit;
  right: inherit;
  z-index: inherit;
  clip: inherit;
  opacity: inherit;
}



@media print {

  * {
    cursor: default !important;
  }

}



parsererror|parsererror {
  display: block;
  font-family: sans-serif;
  font-weight: bold;
  white-space: pre;
  margin: 1em;
  padding: 1em;
  border-width: thin;
  border-style: inset;
  border-color: red;
  font-size: 14pt;
  background-color: lightyellow;
}

parsererror|sourcetext {
  display: block;
  white-space: pre;
  font-family: -moz-fixed;
  margin-top: 2em;
  margin-bottom: 1em;
  color: red;
  font-weight: bold;
  font-size: 12pt;
}

